IndexedDB: Cursor and IndexWriter cleanup for refactor https://bugs.webkit.org/show_bug.cgi?id=105449

Reviewed by Tony Chang.

This is a cleanup of some code to make the refactor that is coming
in https://bugs.webkit.org/show_bug.cgi?id=102741 cleaner. Some
CursorType assertions have been removed because the code will be
used in more generic circumstances in a future patch.

The previously-private IndexWriter has been pulled into
IDBObjectStoreBackendImpl and made to just use IDB*Metadata
so it can be reused later.

No new tests as this does not change the logic of executing code.

* Modules/indexeddb/IDBCursorBackendImpl.cpp:
(WebCore::IDBCursorBackendImpl::IDBCursorBackendImpl):
(WebCore::IDBCursorBackendImpl::CursorPrefetchIterationOperation::perform):
* Modules/indexeddb/IDBCursorBackendImpl.h:
(WebCore::IDBCursorBackendImpl::create):
(WebCore::IDBCursorBackendImpl::value):
(IDBCursorBackendImpl):
* Modules/indexeddb/IDBIndexBackendImpl.cpp:
(WebCore::IDBIndexBackendImpl::OpenIndexCursorOperation::create):
(WebCore::IDBIndexBackendImpl::OpenIndexCursorOperation::OpenIndexCursorOperation):
(IDBIndexBackendImpl::OpenIndexCursorOperation):
(WebCore::IDBIndexBackendImpl::OpenIndexCursorOperation::perform):
* Modules/indexeddb/IDBObjectStoreBackendImpl.cpp:
(WebCore::IDBObjectStoreBackendImpl::IndexWriter::verifyIndexKeys):
(WebCore::IDBObjectStoreBackendImpl::IndexWriter::writeIndexKeys):
(WebCore::IDBObjectStoreBackendImpl::IndexWriter::addingKeyAllowed):
(WebCore::IDBObjectStoreBackendImpl::makeIndexWriters):
* Modules/indexeddb/IDBObjectStoreBackendImpl.h:
(IndexWriter):
(WebCore::IDBObjectStoreBackendImpl::IndexWriter::IndexWriter):
(IDBObjectStoreBackendImpl):
* Modules/indexeddb/IDBRequest.cpp:
(WebCore::IDBRequest::IDBRequest):
(WebCore::IDBRequest::setCursorDetails):
(WebCore::IDBRequest::setResultCursor):
(WebCore::IDBRequest::onSuccess):
* Modules/indexeddb/IDBRequest.h:
(IDBRequest):


Canonical link: https://commits.webkit.org/123776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138290 268f45cc-cd09-0410-ab3c-d52691b4dbfc