Source/WebCore/Modules/indexeddb/IDBObjectStoreBackendImpl.h
@@ -90,6 +90,30 @@ public:
     PassRefPtr<IDBBackingStore> backingStore() const { return m_database->backingStore(); }
     int64_t databaseId() const { return m_database->id(); }
 
+    class IndexWriter {
+    public:
+        explicit IndexWriter(const IDBIndexMetadata& indexMetadata)
+            : m_indexMetadata(indexMetadata)
+        { }
+
+        IndexWriter(const IDBIndexMetadata& indexMetadata, const IDBObjectStoreBackendInterface::IndexKeys& indexKeys)
+            : m_indexMetadata(indexMetadata)
+            , m_indexKeys(indexKeys)
+        { }
+
+        bool verifyIndexKeys(IDBBackingStore&, IDBBackingStore::Transaction*, int64_t databaseId, int64_t objectStoreId, int64_t indexId, bool& canAddKeys, const IDBKey* primaryKey = 0, String* errorMessage = 0) const WARN_UNUSED_RETURN;
+
+        void writeIndexKeys(const IDBBackingStore::RecordIdentifier&, IDBBackingStore&, IDBBackingStore::Transaction*, int64_t databaseId, int64_t objectStoreId) const;
+
+    private:
+        bool addingKeyAllowed(IDBBackingStore&, IDBBackingStore::Transaction*, int64_t databaseId, int64_t objectStoreId, int64_t indexId, const IDBKey* indexKey, const IDBKey* primaryKey, bool& allowed) const WARN_UNUSED_RETURN;
+
+        const IDBIndexMetadata m_indexMetadata;
+        IDBObjectStoreBackendInterface::IndexKeys m_indexKeys;
+    };
+
+    static bool makeIndexWriters(PassRefPtr<IDBTransactionBackendImpl>, IDBBackingStore*, int64_t databaseId, const IDBObjectStoreMetadata&, PassRefPtr<IDBKey> primaryKey, bool keyWasGenerated, const Vector<int64_t>& indexIds, const Vector<IDBObjectStoreBackendInterface::IndexKeys>&, Vector<OwnPtr<IndexWriter> >* indexWriters, String* errorMessage, bool& completed) WARN_UNUSED_RETURN;
+
 private:
     IDBObjectStoreBackendImpl(const IDBDatabaseBackendImpl*, const IDBObjectStoreMetadata&);
 
